[package]
name = "vpn-link-serde"
version = "0.1.5"
edition = "2024"
rust-version = "1.92"
description = "A comprehensive parser and serializer for VPN proxy protocol links (VMess, VLess, Shadowsocks, Trojan, Hysteria2)"
license = "MIT"
authors = ["shaonhuang <yukuaihuang@icloud.com>"]
repository = "https://github.com/shaonhuang/vpn-link-serde"
documentation = "https://docs.rs/vpn-link-serde"
keywords = ["vpn", "proxy", "vmess", "vless", "hysteria2"]
categories = ["network-programming", "parsing", "encoding"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
url = "2.5"
urlencoding = "2.1"

[dev-dependencies]
serde_test = "1.0"

[features]
default = []

[lib]
name = "vpn_link_serde"
path = "src/lib.rs"